# headless-clevo-fan-control

./: CMakeLists.txt  README.md
src/: clevo-fan-control.service  main.c
